iFeature Pro Changelog

****************************

Version 4.0.8 (03-14-12)
-Fix for table in calendar widget. 
-Fixed custom slide captions.
-Increased Carousel image limit.
-Increased Slider image limit.
-Updated static CSS stylesheet with table code.

Version 4.0.7 (03-08-12)
-Fixed typo in theme options panel.
-Fix for page titles.
-Conditional to stop breadcrumb links from appearing on attachment pages. 
-Removed some unecessary CSS and images.
-Added browser specific HTML classes to allow IE version specific CSS.
-Fixed Google Font library call to be SSL friendly. 
-Featured image fix for IE9.

Version 4.0.6 (03-01-12)
-Additional margin fix for HTML tables.
-Updated Foundation CSS.
-Removed 20 slide limit from custom slides. 
-Adjusted doctype. 
-Removed unnecessary breadcrumb option from header options. 
-Added Banner URL option.
-Changed Update API function name to avoid plugin conflicts. 
-Removed legacy icon margin option.
-CSS tweaks.
-Removed HTML comment before doctype call, fixes IE quirks mode issue. 
-Added Apple Touch Icon option. 

Version 4.0.5 (02-23-12)
-Fix for HTML tables.
-Added align:none option for featured images.
-Responsive design adjustments.
-Added missing translation wrapper to Tags: text. 
-Added a few IE related CSS fixes.
-Modified breadcrumb style, made them a page element and a templates option.
-Removed archive title and search result text from templates.
-Improved post index pagination.

Version 4.0.4 (02-17-12)
-Adjustment to Foundation JS calls to fix further plugin conflicts.
-Added Layout options.
-Minor Theme Options copy adjustments.
-Featured Image option available for Archive and Single templates.
-Added .caption_title and .caption_text classes for slider caption text.
-Fixed IE8 post thumbnail bug.
-Added iFeature Tabbed Widget.

Version 4.0.3 (02-13-12)
-Added NivoSlider option.
-Removed "width" element from slider images. 
-Fixed description color option.
-Searchform in nav now has separate style from widget. 