@@ -351,27 +351,27 @@ function menu_fallback() {
 */ 
 function ifp_widgets_init() {
     register_sidebar(array(
-    	'name' => 'Sidebar Widgets',
+    	'name' => 'Full Sidebar',
     	'id'   => 'sidebar-widgets',
-    	'description'   => 'These are widgets for the sidebar.',
+    	'description'   => 'These are widgets for the full sidebar.',
     	'before_widget' => '<div id="%1$s" class="widget-container">',
     	'after_widget'  => '</div>',
     	'before_title'  => '<h2 class="widget-title">',
     	'after_title'   => '</h2>'
     ));
     register_sidebar(array(
-    	'name' => 'Sidebar Left',
+    	'name' => 'Left Half Sidebar',
     	'id'   => 'sidebar-left',
-    	'description'   => 'These are widgets for the left sidebar.',
+    	'description'   => 'These are widgets for the left half sidebar.',
     	'before_widget' => '<div id="%1$s" class="widget-container">',
     	'after_widget'  => '</div>',
     	'before_title'  => '<h2 class="widget-title">',
     	'after_title'   => '</h2>'
     ));    	
     register_sidebar(array(
-    	'name' => 'Sidebar Right',
+    	'name' => 'Right Half Sidebar',
     	'id'   => 'sidebar-right',
-    	'description'   => 'These are widgets for the right sidebar.',
+    	'description'   => 'These are widgets for the right half sidebar.',
     	'before_widget' => '<div id="%1$s" class="widget-container">',
     	'after_widget'  => '</div>',
     	'before_title'  => '<h2 class="widget-title">',
